# app-prototype

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md
.claude/agents/: frontend-react-playwright.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/app/models/: todo.py
backend/app/routers/: health.py  todos.py
backend/app/services/: todo_service.py
backend/tests/: test_health.py  test_todos.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts  todos.ts
frontend/src/components/: LoginPage.css  LoginPage.tsx  StatsCard.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/contexts/: AuthContext.tsx  AuthContextDef.ts
frontend/src/hooks/: useAuth.ts
frontend/src/services/: auth.ts
frontend/src/types/: todo.ts
infrastructure/: README.md
infrastructure/terraform/: api_gateway.tf  cloudfront.tf  cognito.tf  dynamodb.tf  ecr.tf  lambda.tf  outputs.tf  s3.tf  variables.tf  versions.tf
local/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
local/scripts/: init-all.sh  init-cognito.sh  init-dynamodb.py  init-dynamodb.sh
